fix: removed double scroll bar from parrallax component

--- a/client/app/PropertyPage/page.css
+++ b/client/app/PropertyPage/page.css
@@ -15,3 +15,12 @@ body {
 *:before {
   box-sizing: border-box;
 }
+
+
+.house {
+  height: 100%;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 1rem;
+  margin-top: 50px;
+}
